@@ -4,6 +4,13 @@
 
  Changes between 0.9.8d and 0.9.8e  [XX xxx XXXX]
 
+  *) Since AES128 and AES256 (and similarly Camellia128 and
+     Camellia256) share a single mask bit in the logic of
+     ssl/ssl_ciph.c, the code for masking out disabled ciphers needs a
+     kludge to work properly if AES128 is available and AES256 isn't
+     (or if Camellia128 is available and Camellia256 isn't).
+     [Victor Duchovni]
+
   *) Fix the BIT STRING encoding generated by crypto/ec/ec_asn1.c
      (within i2d_ECPrivateKey, i2d_ECPKParameters, i2d_ECParameters):
      When a point or a seed is encoded in a BIT STRING, we need to
@@ -1032,6 +1039,11 @@
      [Richard Levitte]
 
  Changes between 0.9.7l and 0.9.7m  [xx XXX xxxx]
+
+  *) Since AES128 and AES256 share a single mask bit in the logic of
+     ssl/ssl_ciph.c, the code for masking out disabled ciphers needs a
+     kludge to work properly if AES128 is available and AES256 isn't.
+     [Victor Duchovni]
 
   *) Have SSL/TLS server implementation tolerate "mismatched" record
      protocol version while receiving ClientHello even if the
